# Lara-Israel-Muller-Gonzalo-ExamenCPP1

./: CMakeLists.txt  README.md  main.cpp
parte c/: config.h
parte c++/asistencia/: asistencia.cpp  asistencia.h
parte c++/asistencia-c++/: asistencia.cpp  asistencia.h
parte c++/estudiante/: estudiante.cpp  estudiante.h
parte c++/estudiante-c++/: estudiante.cpp  estudiante.h
parte c/asistencia-c/: asistencia.c  asistencia.h
parte c/estudiante-c/: estudiante.c  estudiante.h
